<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/gift_create_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/gift_create_takepicture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/gift_create_cancel_button"
        android:layout_toRightOf="@+id/gift_create_cancel_button"
        android:text="@string/take_picture" />

    <Button
        android:id="@+id/gift_create_create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/gift_create_takepicture_button"
        android:layout_toRightOf="@+id/gift_create_takepicture_button"
        android:text="@string/create_gift" />

    <EditText
        android:id="@+id/gift_create_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gift_create_cancel_button"
        android:ems="10"
        android:hint="@string/gift_name"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/gift_create_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gift_create_name"
        android:ems="10"
        android:hint="@string/gift_description"
        android:inputType="textMultiLine" />

</RelativeLayout>
