<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.towanda.potlatchclient.MainActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/create_gift"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="createGiftClicked"
        android:text="@string/create_gift" />
    
    <Button
        android:id="@+id/top_givers"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/create_gift"
        android:layout_toRightOf="@+id/create_gift"
        android:onClick="topGiversClicked"
        android:text="@string/top_givers" />
    
    <EditText
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/create_gift"
        android:hint="@string/filter" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/filter"
        android:columnCount="1">
    </GridLayout>
<!-- 
    <SearchView
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/filter"
        android:iconifiedByDefault="false"
        android:queryHint="Filter" >

    </SearchView>
 --> 
</RelativeLayout>
