<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/gift_display_image"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/gift_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gift_display_image"
        android:hint="@string/gift_name" />
    
    <ImageButton
        android:id="@+id/gift_display_touched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gift_display_name"
        android:layout_alignLeft="@+id/gift_display_name"
        android:layout_alignStart="@+id/gift_display_name"
        android:hint="@string/touched" />

    <TextView
        android:id="@+id/gift_display_touch_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/gift_display_touched"
        android:layout_toRightOf="@+id/gift_display_touched"
        android:layout_toEndOf="@+id/gift_display_touched"
        android:hint="0" />

    <ImageButton
        android:id="@+id/gift_display_inapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/gift_display_touch_count"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@+id/gift_display_touch_count"
        android:layout_toRightOf="@+id/gift_display_touch_count"
        android:hint="@string/inappropriate" />

    <TextView
        android:id="@+id/gift_display_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/gift_display_touched"
        android:ems="10"
        android:inputType="textMultiLine" />
    
</RelativeLayout>
